--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     <video id="camera" autoplay playsinline muted></video>
 
     <!-- ✅ 引入 static overlay SVG -->
-    <object id="overlay" type="image/svg+xml" data="/static/overlay.svg"></object>
+    <img id="overlay" src="/static/overlay.svg" style="position:absolute;top:0;left:0;width:100%;pointer-events:none;z-index:10;">
   </div>
 
   <div>
